--- a/java-data-analysis-library/pom.xml
+++ b/java-data-analysis-library/pom.xml
@@ -30,4 +30,8 @@
         </plugin>
     </plugins>
   </build>
+  <properties>
+  <sonar.organization>lucixxe</sonar.organization>
+  <sonar.host.url>https://sonarcloud.io</sonar.host.url>
+  </properties>
 </project>
